# search-engine

./: .gitignore  CMakeLists.txt  Readme.md  answers.json  app_version.h.in  config.json  requests.json
include/: app_version.h  converter_json.h  file_exchange.h  inverted_index.h  search_server.h  status.h
src/: CMakeLists.txt  converter_json.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: CMakeLists.txt  test_main.cpp
